@startuml
skinparam classAttributeIconSize 0

interface IPickable {
    + GetSymbol(): char
    + OnPickUp(player: Player): void
}

class Attributes {
    + Power: int
    + Agility: int
    + Health: int
    + Luck: int
    + Aggression: int
    + Wisdom: int
}

class Player {
    - _attributes: Attributes
    - _inventory: Inventory
    - _x: int
    - _y: int
    + GetAttributes(): Attributes
    + AddItem(item: ItemBase): void
}

class CombatResult {
    + DamageDealt: int
    + PlayerDefense: int
}

interface IAttackVisitor {
    + Visit(w: HeavyWeapon, attr: Attributes): CombatResult
    + Visit(w: LightWeapon, attr: Attributes): CombatResult
    + Visit(w: MagicWeapon, attr: Attributes): CombatResult
    + Visit(item: ItemBase, attr: Attributes): CombatResult
}

abstract class ItemBase {
    # _name: string
    + IsTwoHanded(): bool
    + {abstract} GetSymbol(): char
    + OnPickUp(player: Player): void
    + ToString(): string
    + {abstract} Accept(v: IAttackVisitor, attr: Attributes): CombatResult
}

abstract class Weapon {
    + Damage: int
    + Weapon(name: string, damage: int)
    + GetSymbol(): char
    + ToString(): string
}

class HeavyWeapon {
    + Accept(v: IAttackVisitor, attr: Attributes): CombatResult
}

class LightWeapon {
    + Accept(v: IAttackVisitor, attr: Attributes): CombatResult
}

class MagicWeapon {
    + Accept(v: IAttackVisitor, attr: Attributes): CombatResult
}

abstract class ItemModifierDecorator {
    # _innerItem: ItemBase
    + ItemModifierDecorator(item: ItemBase)
    + IsTwoHanded(): bool
    + GetSymbol(): char
    + ToString(): string
    + Accept(v: IAttackVisitor, attr: Attributes): CombatResult
}

class UnluckyModifier {
    + ToString(): string
    + Accept(v: IAttackVisitor, attr: Attributes): CombatResult
}

class StrongModifier {
    + ToString(): string
    + Accept(v: IAttackVisitor, attr: Attributes): CombatResult
}

class NormalAttack {
    + Visit(w: HeavyWeapon, attr: Attributes): CombatResult
    + Visit(w: LightWeapon, attr: Attributes): CombatResult
    + Visit(w: MagicWeapon, attr: Attributes): CombatResult
    + Visit(item: ItemBase, attr: Attributes): CombatResult
}

class StealthAttack {
    + Visit(w: HeavyWeapon, attr: Attributes): CombatResult
    + Visit(w: LightWeapon, attr: Attributes): CombatResult
    + Visit(w: MagicWeapon, attr: Attributes): CombatResult
    + Visit(item: ItemBase, attr: Attributes): CombatResult
}

class MagicAttack {
    + Visit(w: HeavyWeapon, attr: Attributes): CombatResult
    + Visit(w: LightWeapon, attr: Attributes): CombatResult
    + Visit(w: MagicWeapon, attr: Attributes): CombatResult
    + Visit(item: ItemBase, attr: Attributes): CombatResult
}

IPickable <|.. ItemBase

ItemBase <|-- Weapon
Weapon <|-- HeavyWeapon
Weapon <|-- LightWeapon
Weapon <|-- MagicWeapon

ItemBase <|-- ItemModifierDecorator
ItemModifierDecorator o--> ItemBase 

ItemModifierDecorator <|-- UnluckyModifier
ItemModifierDecorator <|-- StrongModifier

IAttackVisitor <|.. NormalAttack
IAttackVisitor <|.. StealthAttack
IAttackVisitor <|.. MagicAttack

Player *--> Attributes
ItemBase ..> IAttackVisitor
IAttackVisitor ..> CombatResult

@enduml